--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=https://www.fiverr.com/s/Aye4kga" />
+  <script>
+    // JavaScript fallback in case meta refresh doesn't work
+    window.location.href = "https://www.fiverr.com/s/Aye4kga";
+  </script>
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>If you are not redirected automatically, <a href="https://www.fiverr.com/s/Aye4kga">click here</a>.</p>
+</body>
+</html>
